plugins {
	id 'fabric-loom' version '1.7-SNAPSHOT'
	id 'maven-publish'

	id 'com.github.johnrengelman.shadow' version '7.1.2'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.
	mavenCentral()
	maven { url 'https://jitpack.io' }
	maven { url 'https://maven.wispforest.io/releases/' }

	flatDir {
		dirs "./lib"
	}
}

fabricApi {
	configureDataGeneration()
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
	modImplementation 'com.github.gnembon:fabric-carpet:1.4.128'
	implementation 'com.github.amithkoujalgi:ollama4j:1.0.77'
	implementation 'com.github.FasterXML:jackson-core:jackson-core-2.17.2'
	implementation 'com.github.FasterXML:jackson-databind:jackson-databind-2.17.2'
	implementation 'com.github.FasterXML:jackson-datatype-jsr310:jackson-datatype-jsr310-2.8.4'
	implementation 'com.github.FasterXML:jackson-annotations:jackson-annotations-2.17.2'
	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
	include "com.github.amithkoujalgi:ollama4j:1.0.77"
	include "io.wispforest:owo-sentinel:${project.owo_version}"
	include "com.github.FasterXML:jackson-databind:jackson-databind-2.17.2"
	include "com.github.FasterXML:jackson-core:jackson-core-2.17.2"
	include "com.github.FasterXML:jackson-datatype-jsr310:jackson-datatype-jsr310-2.8.4"
	include "com.github.FasterXML:jackson-annotations:jackson-annotations-2.17.2"

	dependencies {
		implementation fileTree(dir: 'libs', include: ['*.jar'])
	}

}

shadowJar {
	dependencies {
		include(dependency('com.fasterxml.jackson.core:jackson-databind'))
		include(dependency("io.wispforest:owo-sentinel:0.12.6+1.20.3"))
		include(dependency("com.github.amithkoujalgi:ollama4j:1.0.77"))

	}
	relocate 'com.fasterxml.jackson', 'net.shasankp000.relocated.com.fasterxml.jackson'
	relocate 'io.wispforest:owo-sentinel', 'net.shasankp000.relocated.io.wispforest:owo-sentinel'
	relocate 'com.github.amithkoujalgi', 'net.shasankp000.relocated:com.github.amithkoujalgi'
}


processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
		it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}



// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}
